rewrote texts and restructured html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Hochzeitsfotografie x Mellowlight - Laid back Hochzeits- und Paarfotografie</title>
+		<title>Hochzeitsfotografie x Mellowlight | Hochzeiten &amp; Elopements Berlin</title>
 		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-		<meta name="description" content="Hochzeitsfotografie jenseits der üblichen Klischees. Als Fotografenpaar fangen wir einzigartige Momente, abseits der traditionellen Wege ein. Lasst uns eure besondere Geschichte in unvergessliche Bilder verwandeln. Mehr erfahren....">
+		<meta name="description" content="Hochzeitsfotografie ohne Klischees. Wir sind ein Berliner Fotografenpaar und begleiten alternative und ausgefallene Hochzeiten mit Foto und Video. Schreibt uns doch einfach!">
 		<meta name="keywords" content="Hochzeitsfotografie, Alternative Hochzeiten, Elopement Fotograf, Kreative Hochzeitsbilder, Entspannte Hochzeitsmomente, Mellowlight Fotografen, Hochzeitsfotograf Berlin, Hochzeitsfotograf Unterfranken, Hochzeitsfotograf Main-Spessart">
 		<meta name="author" content="Mellowlight - Marie-Claire & Martin">
 		<link rel="canonical" href="https://mellowlight.de" />
@@ -59,9 +59,9 @@
 		<header id="header">
 			<nav role="navigation" class="top-right open hidden">
 				<a href="index.html" class="disc l1"><div>Home</div></a>
-				<a href="gallery.html" class="disc l2"><div>Galerie</div></a>
-				<a href="https://blog.mellowlight.de" class="disc l3"><div>Blog</div></a>
-				<a href="about.html" class="disc l4"><div>Über uns</div></a>
+				<a href="https://blog.mellowlight.de" class="disc l2"><div>Blog</div></a>
+				<a href="about.html" class="disc l3"><div>About</div></a>
+				<a href="gallery.html" class="disc l4"><div>Galerie</div></a>
 				<a href="services.html" class="disc l5"><div>Angebote</div></a>
 				<a href="#fragen" class="disc l6"><div>FAQ</div></a>
 				<a href="#kontakt" class="disc l7"><div>Kontakt</div></a>
@@ -71,29 +71,8 @@
 			</nav>
 			<div class="logo"><a href="https://mellowlight.de">
 				<img class="logo" src="images/Mellowlight-Neon-Logo.png" alt="Mellowlight Wedding Photography"/>
-				<span>Laid back Hochzeits- und Paarfotografie</span></a></div>
-
+				<span>Alternative Elopement &amp; Hochzeitsfotografie</span></a></div>
 		</header>
-
-		<!-- Cookie Banner -->
-		<div class="cookiewrapper">
-			<header>
-				<i class="bx bx-cookie"></i>
-				<h5>Deine Privatsphäre ist uns wichtig</h5>
-			</header>
-
-			<div class="data">
-				<p>Unsere Website verwendet Cookies, um das Browsing-Erlebnis zu verbessern und den Datenverkehr zu analysieren. <a href="datenschutz.html">Mehr Infos...</a></p>
-			</div>
-
-			<div class="cookiebuttons">
-				<button class="cookiebutton special" id="acceptBtn">Akzeptieren</button>
-				<button class="cookiebutton secondary small" id="declineBtn">Ablehnen</button>
-			</div>
-		</div>
-
-		<!--BACK TO TOP-->
-		<a id="back-to-top" class=""></a>
 		<!-- Main -->
 		<section id="main">
 			<div class="inner">
@@ -105,39 +84,73 @@
 						<img class="mySlides" src="images/weddings/brautpaar-tanz-rote-blaetter.webp" alt="Brautpaar tanzt unter einem Baum mit rotem Laub" loading="lazy">
 					</div>
 					<header class="special">
-						<h2>Hochzeitsfotos ohne den klassischen Kitsch? Yes, please!</h2>
-						<p>Für Paare, die es einzigartig, authentisch und entspannt lieben</p>
+						<h1>Hochzeitsfotos ohne Klischees? Yes, please!</h1>
+						<p>Für alternative Paare, die das einzigartige feiern</p>
 						<br>
-						<a href="#kontakt" class="button special">Euer nächstes Abenteuer beginnt hier</a>
+						<a href="#kontakt" class="button special">Let's Do This</a>
 					</header>
 					<div class="content">
-						<h3 class="hidden">Willkommen bei Mellowlight Hochzeitsfotografie</h3>
+						<h2 class="hidden">Mellowlight rockt deine Hochzeitsfotos</h2>
 						<p class="hidden">
-							Wir sind spezialisiert auf authentische Hochzeitsfotografie und erzählen eure Liebesgeschichte mit echten, fröhlichen und intimen Bildern. Keine Sorge, wir werden auch die Gruppen- und Familienfotos rocken 😎 Wir schätzen all die kleinen Details, die jede Hochzeit so einzigartig machen, genauso einzigartig wie die Paare selbst.<br/>
-							Die perfekte Hochzeit ist die, die eure Handschrift trägt! Wir liefern Fotos, die ihr lieben und Erinnerungen, die ihr schätzen werdet - und, wenn wir Glück haben, ein paar lustige Insider, die ihr für immer teilen könnt!
+							Ihr wollt Hochzeitsfotografen, die eure Lovestory mit Begeisterung festhalten? Wir sind auf authentische Hochzeitsfotografie spezialisiert. Dabei  lassen wir uns nicht von Klischees einengen, sondern lieben es, ungewöhnliche Perspektiven einzunehmen und euch damit zu begeistern.<br/> 
+							Vom Getting Ready über das Brautpaarshooting bis zur After-Wedding-Party stehen wir euch als eingespieltes Team zur Seite und zeigen euch, dass ihr das coolste Brautpaar zwischen Himmel und Erde seid.
 						</p>
-						<h4 class="hidden">Für wen sind wir da?</h4>
-						<p class="hidden">
-							Unsere Arbeit richtet sich an Paare, die das Traditionelle hinter sich lassen wollen - diejenigen, die nach einer Hochzeit suchen, die so einzigartig ist wie ihre Liebe. <br/>
-							Ob ihr zu zweit ein Elopement im Heißluftballon plant, euch eher eine unbeschwerte Gartenfeier zusagt, oder ihr euer eigenes, kleines Hochzeits-Festival veranstaltet - wir sind bereit, eure Geschichte zu erzählen.<br/>
-							Uns ist es zudem besonders wichtig, nicht einfach nur ein weiterer Punkt auf eurer Hochzeitsvorbereitungsliste zu sein. Für uns seid ihr mehr als nur Kunden, immerhin sind wir bei eurer Hochzeit stets in eurer Nähe und unterstützen euch wo wir können. <br/>
-							Deshalb möchten wir euch vorab gerne in einem ungezwungenen Gespräch kennenlernen.<br/>Selbstverständlich könnt ihr auch einfach so, ohne speziellen Anlass, Paarfotos mit uns machen, wann immer ihr Lust dazu habt. 😎
-						</p>
-						<h4 class="hidden">Bucht uns für Eure Hochzeit</h4>
-						<p class="hidden">
-							Eure Geschichte wartet darauf, erzählt zu werden, und wir können es kaum erwarten, sie in Bildern festzuhalten. 
-							Schaut euch unsere Galerie an und spürt die Emotionen und stöbert gerne in unserem Blog. Wenn Ihr das Gefühl habt wir passen zusammen, dann kontaktiert uns. 
-							Wir versprechen, dass eure Fotos auch nach Jahren noch die Emotionen dieses Tages hervorrufen werden.
-						</p>
-						<p class="hidden">Wir freuen uns von euch zu hören - Marie-Claire und Martin von <span id=signatura>Mellowlight</span></p>
-						<a href="#kontakt" class="button special fit hidden">Schickt uns eine Nachricht</a>
+						<p class="hidden"><span id="signatura">🗲</span>Epic Love, Epic Photos <span id="signatura">🗲</span> <br/>  Marie-Claire und Martin von <span id=signatura>Mellowlight</span></p>
+						<a href="#kontakt" class="button special fit hidden">Teilt eure Lovestory mit uns</a>
 					</div>                            
+				</section>
+				<!--ABOUT US -->
+				<section class="wrapper style2">
+					<header id="wir">
+						<h2>Wir sind Mellowlight</h2>
+						<p>Partner im Leben und hinter der Kamera</p>
+					</header>
+					<div class="spotlight hidden">
+						<a href="about.html">
+							<div class="image flush">
+								<video autoplay muted loop class="image fit flush">
+									<source src="images/mellowlight-about-us.mp4" type="video/mp4" loading="lazy">
+									Your browser does not support the video tag.
+								</video>
+							</div>
+						</a>
+						<div class="inner">
+							<div>
+								<h4 id="signatura">Your biggest Fans</h4>
+							</div>
+							<br/>
+							<p>Wir sind Marie-Claire und Martin, und wir möchten, dass euer Hochzeits- oder Elopement-Tag nicht nur außergewöhnlich ist, sondern stressfrei verläuft. Ihr müsst euch nicht verstellen - lasst uns eure verrücktesten Ideen hören und sie gemeinsam verwirklichen. <br/>
+								Uns ist es wichtig, dass ihr das Gefühl habt, keine Hochzeitsfotografen, sondern zwei neue beste Freunde engagiert zu haben, die euren einzigartigen Hochzeitstag mit euch rocken und unvergesslich machen.</p>
+								<div class="content" id>
+									<a href="about.html" class="button special fit">Unsere Story</a>
+								</div>
+						</div>
+					</div>
+					
+				</section>
+				<section id="white-white">
+					<div class="header__bg">
+						<img class="image" id="parallax" src="images/stacked-waves-2.svg"/>
+					</div>
+				</section>
+				<section class="wrapper style1">
+					<div class="inner">
+						<div class="content">
+							<h3 class="hidden">It’s a match: Brautpaare zu denen unsere Hochzeitsfotografie passt</h3>
+							<p class="hidden">
+								Mellowlight richtet sich weniger an Paare, die seit Jahren eine traditionelle Märchenhochzeit in der Kirche planen. 
+								Uns begeistert vor allem das Ungewöhnliche, das Besondere, das, was euch als Paar einzigartig macht. Wenn ihr Bock habt, aus der Norm auszubrechen und Fotografen sucht, die nicht nur eure Vibes teilen, sondern auch jede abgefahrene Idee mitmachen und für die kein Weg zu weit ist - dann seid ihr bei uns genau richtig!<br/>
+								Außerdem lieben wir es, spontan und flexibel zu sein – immer bereit, uns auf neue Abenteuer einzulassen und unerwartete Momente festzuhalten. Daher freuen wir uns auch jederzeit auf kurzfristige Anfragen! Im besten Fall haben wir sogar noch einen freien Slot, der nur auf euch gewartet hat.
+							</p>
+							<a href="#kontakt" class="button special fit hidden">It's a match!</a>                      
+						</div>
+					</div>
 				</section>
 
 				<section class="wrapper style2">
 					<header id="galerie">
-						<h2>Ein paar unserer Lieblingsfotos</h2>
-						<p>Egal ob weit weg oder ganz nah</p>
+						<h2>Shredding through the moments, one frame at a time</h2>
+						<p>Aus Augenblicken werden Erinnerungen</p>
 					</header>
 					<div id="gallery">
 						<div class="inner">
@@ -175,63 +188,28 @@
 								</div>
 							</div>
 							<div>
-								<a href="gallery.html" class="button special fit">Zur gesamten Galerie</a>
+								<a href="gallery.html" class="button special fit">Mehr entdecken</a>
 							</div>
 						</div>
 					</div>
 				</section>
-				<section class="wrapper style1">
-					<div class="inner">
-						<div class="content">
-							<h4 class="hidden"> Kein Fan von Spießigkeit</h4>
-							<p class="hidden">
-								Mellowlight richtet sich weniger an Paare, die seit Jahren eine traditionelle Märchenhochzeit in der Kirche planen. <br/>
-								Uns begeistert vor allem das Ungewöhnliche, das Besondere, das, was euch als Paar einzigartig macht. Wenn ihr Bock habt, aus der Norm auszubrechen und Fotografen sucht, die nicht nur eure Vibes teilen, sondern auch jede abgefahrene Idee mitmachen und für die kein Weg zu weit ist - dann seid ihr bei uns genau richtig!<br/>
-								Außerdem lieben wir es, spontan und flexibel zu sein – immer bereit, uns auf neue Abenteuer einzulassen und unerwartete Momente festzuhalten. Daher freuen wir uns auch jederzeit auf kurzfristige Anfragen! Im besten Fall haben wir sogar noch einen freien Slot, der nur auf euch gewartet hat.
-
-							</p>
-							<h4 class="hidden">Seid ihr noch unentschlossen und fragt euch “Warum braucht man überhaupt Hochzeitsfotografen?”</h4>
-							<p class="hidden">
-								Hochzeitsfotos sind nicht nur Bilder, sondern Geschichten, Emotionen, die für immer festgehalten werden. Auch wenn die Hochzeitstorte längst vernascht ist, das Hochzeitskleid im Schrank hängt und die Blumen verwelkt sind, bleiben die besonderen Hochzeitsbilder und -filme als wertvolle Erinnerungen, die euch zurück zu den glücklichen Momenten eures Hochzeitstags bringen. Mit jedem weiteren Jahr gewinnen diese Aufnahmen an Bedeutung und Wert. Getreu dem Motto:
-							<blockquote class="hidden">Hochzeitsfotos sind erst teuer, dann wertvoll und später unbezahlbar.</blockquote>
-							<p class="hidden">Uns macht es Spaß, diese einzigartigen Augenblicke festzuhalten, damit eure Erinnerungen lange Zeit lebendig bleiben.</p>
-							<p/><p/>  
-							<a href="#kontakt" class="button special fit hidden">Schickt uns eine Nachricht</a>                      
-						</div>
-					</div>
-				</section>
-
 				<section id="white-white">
 					<div class="header__bg">
 						<img class="image" id="parallax" src="images/stacked-waves-2.svg"/>
 					</div>
 				</section>
-				<!--ABOUT US -->
 				<section class="wrapper style1">
-					<header id="wir">
-						<h2>Wir sind Mellowlight</h2>
-						<p>Partner im Leben und hinter der Kamera</p>
-					</header>
-					<div class="spotlight hidden">
-						<a href="about.html">
-							<div class="image flush">
-								<video autoplay muted loop class="image fit flush">
-									<source src="images/mellowlight-about-us.mp4" type="video/mp4" loading="lazy">
-									Your browser does not support the video tag.
-								</video>
-							</div>
-						</a>
-						<div class="inner">
-							<header>
-								<h4 id="signatura">Schön, dass ihr hier seid.</h4>
-							</header>
-							<br/>
-							<p>Wir sind Marie-Claire und Martin, und wir möchten, dass euer Hochzeits- oder Elopement-Tag nicht nur außergewöhnlich, sondern auch voller Freude ist und stressfrei verläuft.  Fühlt euch frei, euch auszudrücken - lasst uns eure verrücktesten Ideen hören und sie gemeinsam verwirklichen. <br/>
-								Uns ist es wichtig, dass ihr das Gefühl habt, keine Hochzeitsfotografen, sondern zwei neue beste Freunde engagiert zu haben, die mit euch die einzigartige Atmosphäre eures Tages unvergesslich machen.</p>
+					<div class="inner">
+						<div class="content">
+							<h3 class="hidden">Unverwechselbare Aufnahmen für unverwechselbare Paare</h3>
+							<p class="hidden">
+								Unsere Arbeit richtet sich an Paare, die das Traditionelle hinter sich lassen wollen - diejenigen, die nach einer Hochzeit suchen, die so einzigartig ist wie ihre Liebe. <br/>
+								Ob ihr zu zweit ein Elopement im Heißluftballon plant, euch eher eine unbeschwerte Gartenfeier zusagt, oder ihr euer eigenes, kleines Hochzeits-Festival veranstaltet - wir sind bereit, eure Geschichte zu erzählen.<br/>
+								Uns ist es zudem besonders wichtig, nicht einfach nur ein weiterer Punkt auf eurer Hochzeitsvorbereitungsliste zu sein. Für uns seid ihr mehr als nur Kunden, immerhin sind wir bei eurer Hochzeit stets in eurer Nähe und unterstützen euch wo wir können. <br/>
+								Deshalb möchten wir euch vorab gerne in einem ungezwungenen Gespräch kennenlernen.<br/>Selbstverständlich könnt ihr auch einfach so, ohne speziellen Anlass, Paarfotos mit uns machen, wann immer ihr Lust dazu habt. 😎
+							</p>
+							<a href="#kontakt" class="button special fit hidden">Schreibt uns</a>                      
 						</div>
-					</div>
-					<div class="content" id>
-						<a href="about.html" class="button special fit">Mehr über uns</a>
 					</div>
 				</section>
 
@@ -454,18 +432,18 @@
 
 							<div class="active">
 								<div class="img"><img src="images/testimonials/n-m.webp" alt="" loading="lazy"></div>
-								<h1>N + M</h1> 
+								<h3>N + M</h3> 
 								<p>
 									Wir haben gerade zusammen alle Fotos angeschaut und sind absolut begeistert! Deine Fotos sind mega schön geworden und spiegeln genau unseren Tag wieder mit allen Emotionen und Details 🥰 Du hast wirklich Talent alle kleinen besonderen Momente vollkommen einzufangen! Vielen Dank für die wunderbaren Bilder!</p>             
 							</div>
 							<div>
 								<div class="img"><img src="images/testimonials/l-j.webp" alt="" loading="lazy"></div>
-								<h1>L + J</h1>   
+								<h3>L + J</h3>   
 								<p>Wir haben uns über die Bilder sehr gefreut, sie sind sehr schön geworden. Ich freue mich auch sehr, dass ich jedem Gast mindestens ein besonders gut gelungenes Bild von ihm bzw. ihr schenken konnte (wenn nicht sogar mehr als eines). Hab vielen Dank für alles.</p>                    
 							</div>
 							<div>
 								<div class="img"><img src="images/testimonials/m-d.webp" alt="" loading="lazy"></div>
-								<h1>M + D</h1> 
+								<h3>M + D</h3> 
 								<p>
 									Wir sind mega glücklich und könnten 100 Mal Danke sagen - war alles echt super und die Bilder sind sooo schön 😍😍😍
 									<br/>Haben auch alle nochmal gesagt wie lieb und toll ihr wart - wie ein Teil der Familie 🥰
@@ -473,7 +451,7 @@
 							</div>
 							<div>
 								<div class="img"><img src="images/testimonials/s-m.webp" alt="" loading="lazy"></div>
-								<h1>S + M</h1> 
+								<h3>S + M</h3> 
 								<p>Wir wollten uns nochmal für den gelungenen Abschluss und dein tolles Shooting bedanken! Das sind tolle Bilder geworden und eine super Erinnerung für uns! Herzlichen Dank dafür!</p>
 							</div>
 						</div>
@@ -489,7 +467,7 @@
 				<!--CONTACT -->			
 				<section class="wrapper style1">
 					<header>
-						<h2>Lasst uns ins Gespräch kommen!</h2>
+						<h2>Let's Do This!</h2>
 						<p>Wir freuen uns von euch zu hören</p>
 					</header>
 					<div class="content">
@@ -545,6 +523,26 @@
 			-->
 			</div>
 		</section>
+		
+		<!-- Cookie Banner -->
+		<div class="cookiewrapper">
+			<header>
+				<i class="bx bx-cookie"></i>
+				<h5>Deine Privatsphäre ist uns wichtig</h5>
+			</header>
+
+			<div class="data">
+				<p>Unsere Website verwendet Cookies, um das Browsing-Erlebnis zu verbessern und den Datenverkehr zu analysieren. <a href="datenschutz.html">Mehr Infos...</a></p>
+			</div>
+
+			<div class="cookiebuttons">
+				<button class="cookiebutton special" id="acceptBtn">Akzeptieren</button>
+				<button class="cookiebutton secondary small" id="declineBtn">Ablehnen</button>
+			</div>
+		</div>
+
+		<!--BACK TO TOP-->
+		<a id="back-to-top" class=""></a>
 
 		<!-- Footer -->
 		<footer id="footer">
