--- a/datenschutz.html
+++ b/datenschutz.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Datenschutzerklärung - Hochzeitsfotografie x Mellowlight</title>
 		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-		<meta name="description" content="Datenschutzerklärung von Mellowlight Hochzeitsfotografie - Laid back Hochzeits- und Paarfotografie">
+		<meta name="description" content="Datenschutzerklärung von Mellowlight Hochzeitsfotografie - Alternative Elopement &amp; Hochzeitsfotografie">
 		<meta name="author" content="Mellowlight - Marie-Claire & Martin">
 		<link rel="canonical" href="https://mellowlight.de/datenschutz" />
 		<meta name="robots" content="index, follow">
@@ -19,21 +19,20 @@
 		<!-- Header -->
 		<header id="header">
 			<nav role="navigation" class="top-right open hidden">
-				<a href="index.html" class="disc l1"><div>Home</div></a>
-				<a href="gallery.html" class="disc l2"><div>Galerie</div></a>
-				<a href="https://blog.mellowlight.de" class="disc l3"><div>Blog</div></a>
-				<a href="about.html" class="disc l4"><div>Über uns</div></a>
+				<a href="https://mellowlight.de" class="disc l1"><div>Home</div></a>
+				<a href="https://blog.mellowlight.de" class="disc l2"><div>Blog</div></a>
+				<a href="about.html" class="disc l3"><div>About</div></a>
+				<a href="gallery.html" class="disc l4"><div>Galerie</div></a>
 				<a href="services.html" class="disc l5"><div>Angebote</div></a>
 				<a href="index.html#fragen" class="disc l6"><div>FAQ</div></a>
 				<a href="index.html#kontakt" class="disc l7"><div>Kontakt</div></a>
-				<a class="disc l8 toggle">
+				<a class="disc l8 toggle" id="navbar">
 					<svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#0f0817}</style><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
 				</a>
 			</nav>
 			<div class="logo"><a href="https://mellowlight.de">
 				<img class="logo" src="images/Mellowlight-Neon-Logo.png" alt="Mellowlight Wedding Photography"/>
-				<span>Laid back Hochzeits- und Paarfotografie</span></a></div>
-
+				<span>Alternative Elopement &amp; Hochzeitsfotografie</span></a></div>
 		</header>
 
 		<a id="back-to-top" class=""></a>
